@startuml
skinparam ClassAttributeIconSize 0

' ===== CLASSI =====
class Account {
    -double balance
    -String accountNumber
    +Account(String accountNumber, double balance)
    +void deposit(double amount)
    +boolean withdraw(double amount)
    +double getBalance()
    +String getAccountNumber()
}

class Client {
    -String name
    -Account account
    +Client(String name, String accountNumber, double initialBalance)
    +String getName()
    +Account getAccount()
    +void addFunds(double amount)
    +void withdrawFunds(double amount)
}

class Main {
    +void main(String[] args)
}

' ===== RELAZIONI =====
Client *-- Account : possiede >
Main --> Client
Main --> Account

@enduml
